// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Claim should render claim GAS button as disabled 1`] = `
<div>
  <Tooltip
    disabled={false}
  >
    <Button
      disabled={true}
      id="claim"
      onClick={[Function]}
      primary={true}
      renderIcon={[Function]}
      shouldCenterButtonLabelText={false}
      type="button"
    >
      <FormattedMessage
        id="dashboardGasClaimButton"
        values={
          Object {
            "amount": "1.25406935",
          }
        }
      />
    </Button>
  </Tooltip>
</div>
`;

exports[`Claim should render claim GAS button as enabled 1`] = `
<div>
  <Tooltip
    disabled={true}
  >
    <Button
      id="claim"
      onClick={[Function]}
      primary={true}
      renderIcon={[Function]}
      shouldCenterButtonLabelText={false}
      type="button"
    >
      <FormattedMessage
        id="dashboardGasClaimButton"
        values={
          Object {
            "amount": "1.25406935",
          }
        }
      />
    </Button>
  </Tooltip>
</div>
`;
